--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://github.com/yueeeeeee87/blog/"
+baseURL: "https://github.com/yueeeeeee87/blog"
 title: ExampleSite
 paginate: 5
 theme: PaperMod
