--- a/config.yml
+++ b/config.yml
@@ -111,6 +111,8 @@ params:
           url: "https://github.com/yueeeeeee87"
         - name: email
           url: "mailto:y6ho@ucsd.edu"
+        - name: leetcode
+          url: 'https://leetcode.com/y6ho/'
 
     # editPost:
     #     URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
@@ -118,7 +120,7 @@ params:
     #     appendFilePath: true # to append file path to Edit link
 
     label:
-      text: "Yueh Huan's Page"
+      text: "Yueh-Huan's Page"
       #icon: "img/Q.gif"
 
     # analytics:  #谷歌分析
