--- a/config.yml
+++ b/config.yml
@@ -71,9 +71,9 @@ languages:
             name: Projects
             url: /posts
             weight: 4
-          - identifier: Gellary
-            name: Gellary
-            url: /gellary
+          - identifier: Gallary
+            name: Gallery
+            url: /gallery
             weight: 5
           - identifier: contact
             name: Contact
